--- a/app-stack/app/meu-website/style.css
+++ b/app-stack/app/meu-website/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: #2500cc;
+    background-color: #cc0022;
     color: white;
     text-align: center;
     margin-top: 50px;
