--- a/app-stack/app/meu-website/style.css
+++ b/app-stack/app/meu-website/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
     background-color: #cc0022;
-    color: white;
+    color: rgb(160, 204, 57);
     text-align: center;
     margin-top: 50px;
 }
