--- a/app-stack/app/meu-website/style.css
+++ b/app-stack/app/meu-website/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
-    background-color: #cc0022;
-    color: rgb(160, 204, 57);
+    background-color: hsl(236, 100%, 40%);
+    color: rgb(255, 255, 255);
     text-align: center;
     margin-top: 50px;
 }
